[project]
name = "pubmed-paper-fetcher"
version = "0.1.0"
description = "A tool to fetch PubMed papers from pharmaceutical/biotech companies"
authors = [
    {name = "Shaikh Aman",email = "shaikhamanksf@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "lxml (>=6.0.0,<7.0.0)",
    "click (>=8.2.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
